Fixed the contrast and link issues based on the feedback from the WAVE accessibility tool

--- a/css/main.css
+++ b/css/main.css
@@ -155,8 +155,8 @@ h3 {
 }
 
 .name-section p {
-  font-family: 'Roboto Slab', serif;
   font-size: 1.5em;
+  font-style: italic;
 }
 
 /** Navigation Area **/
@@ -306,7 +306,7 @@ h3 {
 
 .projects h3 {
   padding: 25px 15px 5px 15px;
-  color: #2EC4B6;
+  color: #011627;
 }
 
 .projects h4 {
